// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`project-overview.md scaffold > empty analysis (analyzer failed) 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Project Overview — test-project

## What This Project Is

**Language:** Unknown
**Framework:** None detected
**Architecture:** Unknown

[Setup will add: Project purpose (what/why/who), target users, problem this solves]

## Tech Stack

**Language:** Unknown
**Framework:** None detected

[Setup will add: Key dependencies, build tools, deployment stack]

## Directory Structure

[Setup will add: Directory purpose explanations, special folders, organizational patterns]

## Current Status

[Setup will add: Development stage, what's working, what's in progress, known issues]

---

*Generated by Anatomia v0.2.0 on 2026-03-19T10:00:00Z*
"
`;

exports[`project-overview.md scaffold > flat Next.js project with minimal data 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Project Overview — test-project

## What This Project Is

**Language:** JavaScript/TypeScript
**Framework:** nextjs
**Architecture:** Unknown

[Setup will add: Project purpose (what/why/who), target users, problem this solves]

## Tech Stack

**Language:** JavaScript/TypeScript
**Framework:** nextjs

[Setup will add: Key dependencies, build tools, deployment stack]

## Directory Structure

[Setup will add: Directory purpose explanations, special folders, organizational patterns]

## Current Status

[Setup will add: Development stage, what's working, what's in progress, known issues]

---

*Generated by Anatomia v0.2.0 on 2026-03-19T10:00:00Z*
"
`;

exports[`project-overview.md scaffold > rich FastAPI project with full structure 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Project Overview — test-project

## What This Project Is

**Language:** Python
**Framework:** fastapi
**Architecture:** layered (confidence: 0.85)

[Setup will add: Project purpose (what/why/who), target users, problem this solves]

## Tech Stack

**Language:** Python
**Framework:** fastapi
**Testing:** pytest

[Setup will add: Key dependencies, build tools, deployment stack]

## Directory Structure

**Key directories:**
- **src:** \`src/\`
- **tests:** \`tests/\`
- **api:** \`src/api/\`

**Entry points:**
- \`src/main.py\`
- \`src/api/app.py\`

**Tests:** \`tests/\`

[Setup will add: Directory purpose explanations, special folders, organizational patterns]

## Current Status

[Setup will add: Development stage, what's working, what's in progress, known issues]

---

*Generated by Anatomia v0.2.0 on 2026-03-19T10:00:00Z*
"
`;
